syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Gitec.InfoServe.CommonLib";

package syshealth;

service SysDataService {
  rpc SysDataClientServe (DeviceActionRequest) returns (ServiceReply);
}

message DeviceActionRequest {
  google.protobuf.Timestamp timestamp = 1;
  string device = 2;
  ServiceType service = 3;
  string data = 4;
}


message ServiceReply {
  google.protobuf.Timestamp timestamp = 1;
  StatusType status = 2;

  oneof servicereplydetails {
    ServiceReplyPending pending = 3;
    ServiceReplySucces success = 4;
    ServiceReplyFailure failure = 5;
  }
}

message ServiceReplyPending{
  string state = 1;
}

message ServiceReplySucces{
  string jsondata = 1;
}

message ServiceReplyFailure{  
  string message = 1;
  string stacktrace =2;
}

enum ServiceType {
    UNKNOWN_SERVICE = 0;
    HARDWARE = 1;
    NETWORK = 2;
    STORAGE = 3;
    PROCESSES = 4;
    APPLICATIONS = 5;
    SECURITY_LOGS = 6;
    POWER_PERFORMANCE = 7;
}

enum StatusType {
    UNKNOWN_STATUS = 0;
    PENDING = 1;
    SUCCESS = 2;
    FAILURE = 3;
}
